crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__parse_member_as_function_arg.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Call:
            callee:
              Identifier:
                name: print
                span:
                  start: 0
                  end: 5
                  file: "<input>"
            args:
              - Member:
                  target:
                    Identifier:
                      name: data
                      span:
                        start: 6
                        end: 10
                        file: "<input>"
                  member:
                    name: as_string
                    span:
                      start: 11
                      end: 20
                      file: "<input>"
                  args: []
                  span:
                    start: 6
                    end: 22
                    file: "<input>"
            span:
              start: 0
              end: 23
              file: "<input>"
        span:
          start: 0
          end: 24
          file: "<input>"
