crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__parse_nested_member_calls.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
assertion_line: 243
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Member:
            target:
              Identifier:
                name: outer
                span:
                  start: 0
                  end: 5
                  file: "<input>"
            member:
              name: method
              span:
                start: 6
                end: 12
                file: "<input>"
            args:
              - Member:
                  target:
                    Identifier:
                      name: inner
                      span:
                        start: 13
                        end: 18
                        file: "<input>"
                  member:
                    name: method
                    span:
                      start: 19
                      end: 25
                      file: "<input>"
                  args: []
                  type_args: []
                  span:
                    start: 13
                    end: 27
                    file: "<input>"
            type_args: []
            span:
              start: 0
              end: 28
              file: "<input>"
        span:
          start: 0
          end: 29
          file: "<input>"
