crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__parse_variable_reference.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Identifier:
            name: x
            span:
              start: 0
              end: 1
              file: "<input>"
        span:
          start: 0
          end: 2
          file: "<input>"
