crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__return_no_value.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
expression: program
---
items:
  - Statement:
      Return:
        value: ~
        span:
          start: 0
          end: 7
