crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__return_statement.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
expression: program
---
items:
  - Statement:
      Return:
        value:
          Literal:
            - Number: 42
            - start: 7
              end: 9
        span:
          start: 0
          end: 10
