crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__simple_assignment.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
expression: program
---
items:
  - Statement:
      Assign:
        target:
          Name:
            name: x
            span:
              start: 0
              end: 1
              file: "<input>"
        value:
          Literal:
            - Number: 42
            - start: 4
              end: 6
              file: "<input>"
        span:
          start: 0
          end: 7
          file: "<input>"
