crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__simple_method_call.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
assertion_line: 201
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Member:
            target:
              Identifier:
                name: obj
                span:
                  start: 0
                  end: 3
                  file: "<input>"
            member:
              name: method
              span:
                start: 4
                end: 10
                file: "<input>"
            args: []
            type_args: []
            span:
              start: 0
              end: 12
              file: "<input>"
        span:
          start: 0
          end: 13
          file: "<input>"
