crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__string_literal.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Literal:
            - String: hello
            - start: 0
              end: 7
              file: "<input>"
        span:
          start: 0
          end: 8
          file: "<input>"
